# pemmican

./: Cargo.toml  LICENCE  README.md  clippy.sh
src/: config.rs  error.rs  lib.rs  never.rs  plugins.rs  shared.rs
src/plugins/: good_citizen.rs  htdocs.rs  mod.rs  page_visits.rs  router.rs  session.rs
src/router/: dynamic_router.rs  mod.rs
tests/: basic.rs  dynamic.rs  dynamic.rs.HIDE  htdocs.rs  plugin.rs  plugin.rs.HIDE  slow.rs
