[package]
name = "pemmican"
version = "0.1.1-unstable"
description = "Pemmican Web Framework"
authors = ["Mike Dilger <mike@optcomp.nz>"]
readme = "README.md"
repository = "https://github.com/mikedilger/pemmican"
license = "MIT OR Apache-2.0"
keywords = [ "webserver", "framework" ]

[dependencies]
hyper = "0.11"
futures = "0.1"
futures-cpupool = "0.1"
chashmap = "2.2"
